fixed cart and checkout pages on mobile, fixed login toast showing an error after logging in as admin, when no error actually happened

--- a/src/pages/protected/CheckoutPage/CheckoutPage.scss
+++ b/src/pages/protected/CheckoutPage/CheckoutPage.scss
@@ -8,9 +8,4 @@ $breakpoint-tablet: 768px;
     max-width: 25% !important;
     padding-left: 1rem;
   }
-
-  .checkout-summary {
-    max-width: 25% !important;
-    padding-left: 1rem;
-  }
 }
